--- a/neo4j.conf
+++ b/neo4j.conf
@@ -15,7 +15,7 @@ dbms.connector.http.listen_address=:7474
 dbms.security.auth_enabled=true
 
 # Logs
-dbms.logs.query.enabled=true
+dbms.logs.query.enabled=INFO  
 dbms.logs.query.threshold=1s
 dbms.logs.query.parameterized.enabled=true
 
