--- a/neo4j.conf
+++ b/neo4j.conf
@@ -3,7 +3,7 @@ dbms.memory.pagecache.size=512m
 dbms.memory.heap.initial_size=512m
 dbms.memory.heap.max_size=2g
 
-# Bolt (Graph Database) Protocol
+# Bolt Protocol
 dbms.connector.bolt.enabled=true
 dbms.connector.bolt.listen_address=:7687
 
@@ -13,11 +13,3 @@ dbms.connector.http.listen_address=:7474
 
 # Authentication
 dbms.security.auth_enabled=true
-
-# Logs
-dbms.logs.query.enabled=INFO  
-dbms.logs.query.threshold=1s
-dbms.logs.query.parameterized.enabled=true
-
-# To avoid strict validation error in your case
-server.config.strict_validation.enabled=false
