trynna add plugin

--- a/neo4j.conf
+++ b/neo4j.conf
@@ -13,3 +13,6 @@ dbms.connector.http.listen_address=:7474
 
 # Authentication
 dbms.security.auth_enabled=true
+
+
+dbms.security.procedures.unrestricted=apoc.*
