fixed deprecated stuff

--- a/neo4j.conf
+++ b/neo4j.conf
@@ -1,19 +1,18 @@
 # Neo4j memory settings
-dbms.memory.pagecache.size=512m
-dbms.memory.heap.initial_size=512m
-dbms.memory.heap.max_size=2g
+server.memory.pagecache.size=512m
+server.memory.heap.initial_size=512m
+server.memory.heap.max_size=2g
 
 # Bolt Protocol
-dbms.connector.bolt.enabled=true
-dbms.connector.bolt.listen_address=:7687
+server.bolt.enabled=true
+server.bolt.listen_address=:7687
 
 # HTTP interface
-dbms.connector.http.enabled=true
-dbms.connector.http.listen_address=:7474
+server.http.enabled=true
+server.http.listen_address=:7474
 
 # Authentication 
 dbms.security.auth_enabled=true
 
-
-
+# APOC procedures configuration
 dbms.security.procedures.unrestricted=apoc.*
