--- a/neo4j.conf
+++ b/neo4j.conf
@@ -5,11 +5,11 @@ server.memory.heap.max_size=2g
 
 # Bolt Protocol
 server.bolt.enabled=true
-server.bolt.listen_address=:7687
+server.bolt.listen_address=0.0.0.0:7687
 
 # HTTP interface
 server.http.enabled=true
-server.http.listen_address=:7474
+server.http.listen_address=0.0.0.0:7474
 
 # Authentication 
 dbms.security.auth_enabled=true
