--- a/neo4j.conf
+++ b/neo4j.conf
@@ -3,9 +3,10 @@ server.memory.pagecache.size=512m
 server.memory.heap.initial_size=512m
 server.memory.heap.max_size=2g
 
-# Bolt Protocol
+# Bolt Protocol - configured for SSL proxy
 server.bolt.enabled=true
 server.bolt.listen_address=0.0.0.0:7687
+server.bolt.advertised_address=neo4j.bolt.whagons.com:7687
 
 # HTTP interface
 server.http.enabled=true
